# cgal

Isosurfacing_3/examples/Isosurfacing_3/: CMakeLists.txt  dual_contouring_labelled_image.cpp
Isosurfacing_3/include/CGAL/Isosurfacing_3/: dual_contouring_3.h
Isosurfacing_3/include/CGAL/Isosurfacing_3/internal/: Grid_topology_3.h  dual_contouring_functors.h
Lab/demo/Lab/Plugins/C3t3_io_colors_plugin/: C3t3_info_type.h  CMakeLists.txt  Scene_c3t3_color_item.h  Scene_c3t3_color_item_config.h  Scene_triangulation_3_color_item.cpp  Scene_triangulation_3_color_item.h  Scene_triangulation_3_color_item_config.h  c3t3_io_colors_plugin.cpp
Mesh_3/examples/Mesh_3/: mesh_3D_gray_vtk_image.cpp
